fixed overflow of tables on dashboard

--- a/static/styles.css
+++ b/static/styles.css
@@ -169,7 +169,7 @@ input, select {
   display: flex;
   flex-direction: column;
 }
-
+@media (min-width:1024px )
 .data-col table{
   overflow: hidden;
 }
